--- a/adriangee/Base.lproj/Main.storyboard
+++ b/adriangee/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5Tq-jM-lgf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="f78-fC-bKH">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -16,7 +16,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="VideoCell" rowHeight="74" id="Pqc-oO-QPx" customClass="VideoCell" customModule="adriangee" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="600" height="74"/>
+                                <rect key="frame" x="0.0" y="92" width="600" height="74"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Pqc-oO-QPx" id="2yv-1U-QQ7">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="73.5"/>
@@ -60,10 +60,11 @@
                             <outlet property="delegate" destination="5Tq-jM-lgf" id="BmX-uo-Wwm"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="1vT-YM-jjK"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B7j-Sd-Gao" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="767" y="260"/>
+            <point key="canvasLocation" x="1579" y="260"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="cif-8w-kAD">
@@ -137,7 +138,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="doE-kq-ccj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1505" y="260"/>
+            <point key="canvasLocation" x="2317" y="260"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="VLT-kn-hOU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="f78-fC-bKH" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Lh3-3W-kBw">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5Tq-jM-lgf" kind="relationship" relationship="rootViewController" id="LdW-hr-4MM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PfQ-X8-a0l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="767" y="260"/>
         </scene>
     </scenes>
 </document>
